updates after feedback; enable Spring Dev tools for hot reloading